# SNIPER

.github/workflows/: ci.yml
bot/: Cargo.toml  config.example.toml
bot/src/: buy_engine.rs  candidate_buffer.rs  config.rs  gui.rs  lib.rs  main.rs  market_maker.rs  nonce_manager.rs  observability.rs  quantum_selector.rs  rpc_manager.rs  security.rs  sniffer.rs  test_environment.rs  tx_builder.rs  types.rs
bot/src/modes/: quantum_manual.rs
bot/src/sniffer/: http_source.rs  real.rs  wss_source.rs
bot/tests/: buy_flow_mock.rs  nonce_manager_tests.rs  rpc_manager_tests.rs
