[package]
name = "sniffer_bot_light"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1"
futures = "0.3"
itertools = "0.13"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
fastrand = "2"
bs58 = "0.5"
scopeguard = "1.2"
uuid = { version = "1.0", features = ["v4"] }

# GUI
eframe = { version = "0.27" }

# Solana (dopasuj do swojej wersji toolchaina; poniższe są przykładowe)
solana-client = "1.18.14"
solana-sdk = "1.18.14"
solana-transaction-status = "1.18.14"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
tempfile = "3"